<resources>
    <string name="app_name">InDecisive</string>
    <string name="action_settings">Settings</string>


    <string name="recent_decisions_name">Aaron T.</string>
    <string name="recent_decisions_default"> just decided on&#8230;</string>
    <string name="recent_decisions_choice"> study Computer Science at Indiana University!</string>


    <string name="home_text_1">Weigh your choices.</string>
    <string name="home_text_2">Make your decision.</string>

    <string name="start_text">Start</string>

    <string name="login_to_account">Login</string>
    <string name="account_login">Account</string>
    <string name="password_login">Password</string>
    <string name="keep_login">Keep me logged in</string>


    <string name="start_decision_how">How many options are in this decision?</string>
    <string name="start_decision_how_field_text">Enter a number between 2 and 10</string>
    <string name="start_decision_what">What are your choices in this decision?</string>

    <string name="start_decision_go">Go!</string>
    <string name="title_activity_choice_handler">ChoiceHandler</string>

    <string name="choice_n_name">Choice</string>
    <string name="choice_name_enter">Enter a title.</string>



</resources>