<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <EditText
        android:id="@+id/start_decision_edit_number_of_options"
        android:inputType="number"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_decision_how" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_decision_how_field_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-100dp"
        android:text="@string/start_decision_go"
        android:onClick="createChoicesBasedOnNumberOfChoices"/>



</LinearLayout>
